genero un conflitto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Ciao sono un file di test</h1>
     <h2>Sono un commit add</h2>
-    
+    <h2>Sono un conflitto poco dotato</h2>
 </body>
 </html>
