Inizializzazione log in

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test stringhe di comando git
-    </title>
+    <title>Test stringhe di comando git</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h1>Ciao sono un file di test</h1>
     <h2>Sono un commit add</h2>
     <h2>SONO UN CONFLITTO</h2>
+    <script src="index.js"></script>
 </body>
 </html>
