modifiche in corso d'opera su css e html

--- a/login.html
+++ b/login.html
@@ -11,12 +11,10 @@
         <form id="loginForm">
             <h2>Login</h2>
             <div class="input-group">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" required placeholder="Username">
             </div>
             <div class="input-group">
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required placeholder="Password">
             </div>
             <button type="submit">Login</button>
         </form>
